[tool.poetry]
name = "the_void"
version = "0.1.0"
description = ""
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
